# oshkelosh_fastapi

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  main.py  openapi.py
docs/: DATABASE.md  README.md  SECURITY.md  SEO.md
migrations/: README.md
models/: README.md  __init__.py  addon_config.py  audit_log.py  background_job.py  cart.py  cart_item.py  category.py  manual_supplier.py  notification_template.py  order.py  order_idempotency_key.py  order_item.py  processed_webhook_event.py  product.py  product_image.py  product_variant.py  site_settings.py  user.py  webhook.py
schemas/: __init__.py  addon_manifest.py  address.py  base.py  cart.py  category.py  order.py  payment.py  product.py  storefront.py  supplier.py  user.py
scripts/: README.md  commit_push_addons.sh  create_admin.py  export_openapi.py  run_dev.sh  watch_addon_restart.py
tests/: conftest.py  test_abandoned_cart.py  test_addon_config_serialization.py  test_addon_credential_validation.py  test_addon_host_version.py  test_addon_install.py  test_addon_integration.py  test_addon_log.py  test_addons.py  test_admin_categories.py  test_admin_dashboard.py  test_admin_flash_cookie.py  test_admin_users.py  test_audit_fixes.py  test_audit_log.py  test_audit_remediation_auth.py  test_auth.py  test_auth_links.py  test_background_jobs.py  test_bootstrap.py  test_branding_assets.py  test_categories.py  test_category_defaults.py  test_checkout_e2e.py  test_checkout_pricing.py  test_commerce.py  test_countries.py  test_currency.py  test_d1_async.py  (+37 more)
(+223 files in other folders)
