[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oshkelosh"
version = "0.1.0"
description = "Modular, extensible e-commerce framework built with FastAPI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0",
    "boto3>=1.34.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "cloudflare>=3.1.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "slowapi>=0.1.9",
    "pillow>=10.0.0",
    "packaging>=24.0",
    "qrcode[pil]>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
workers = [
    "cloudflare-workers>=0.0.1",
    "wrangler>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "models", "schemas"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
